--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,29 +1,60 @@
-body {
-  font-family: Helvetica, sans-serif;
-  font-size: 18px;
-  }
+body{
+   font-family: Helvetica, sans-serif;
+ }
+ /*banner with company logo */
 
-  /*banner with company logo */
+.company{
+background-image: url("../images/moto.jpeg");
+height: 30rem;
+background-repeat: no-repeat;
+max-width: 960px;
+}
+.container {
+ background-color: black;
+ color: white;
+ max-width: 960px;
+ display: flex;
+}
 
-.company {
+.banner{
   display: flex;
-  flexwrap: wrap;
-  align-items: center;
-  background-color: black;
-  color: white;
-  }
- .banner{
-   max-width: 960px;
+  flex-wrap: wrap;
+  tex-align: left;
+  margin-left: 15rem;
+}
+.banner img{
+  height: 1.5rem;
+ width: 1.8rem;
+ margin-top: 1rem;
+}
+
+.supporting{
+  margin: 4em auto;
+}
+ /*new arrivals container*/
+
+.subcontainer{
+  display: block;
+   background-color: black;
+   margin: auto;
+   max-width: 500px;
+}
+.supporting {
+    display: block;
+ height: 10rem;
+ width: 30rem;
+
+
  }
 
-.banner img {
-  height: 1.5rem;
-  width: 1.8rem;
-  margin-right: 1rem;
-  margin-left: .5rem;
-  align-content: center;
+.headline{
+ color: white;
+ padding-top: .5rem;
+margin-right: 10rem;
+margin-left: 3rem;
+margin-top: 5rem;
+
 }
-.logo {
-  font-size: 1rem;
-  text-align: center;
+h2 h4{
+ color: white;
 }
