--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -13,7 +13,7 @@ max-width: 960px;
  background-color: black;
  color: white;
  display: flex;
- max-width: 960px;
+ width: 100%;
 }
 .banner{
   display: flex;
@@ -35,7 +35,7 @@ max-width: 960px;
   height: 20rem;
   margin-top: 9rem;
   margin-bottom: 0rem;
-  width: 25rem;
+  max-width: 50%;
   margin-left: 10rem;
 }
 .black-box{
@@ -70,7 +70,7 @@ h4{
 nav {
   background-color: firebrick;
     color: white;
-    max-width: 960px;
+  width: 100%;
 }
 ul {
   list-style: none;
@@ -83,9 +83,9 @@ li {
  }
  .offer {
   display: flex;
-  margin: 3rem 3rem 0rem 4rem;
+  margin: 3rem 3rem 0rem 10rem;
   height: 20rem;
- max-width: 960px;
+ width: 100%;
 }
 .grid{
   display: flex;
@@ -116,7 +116,7 @@ li {
   display: flex;
   max-width: 960px;
   border: solid black 1px;
-  margin: 3rem 3rem 4rem 4rem;
+  margin: 3rem 3rem 4rem 10rem;
   height: 10rem;
 }
 .info-grid{
