--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,5 +1,7 @@
+html
 body{
    font-family: Helvetica, sans-serif;
+   font-size: 18px;
  }
  /*banner with company logo */
 
@@ -70,6 +72,7 @@ h4{
   flex-direction: column;
   align-items: center;
 }
+
 nav {
   display: flex;
   justify-content: center;
@@ -77,6 +80,7 @@ nav {
   color: white;
   width: 100%;
 }
+
 ul {
   padding: 0;
   display: flex;
@@ -84,6 +88,11 @@ ul {
   width: 960px;
   list-style: none;
  }
+
+ .menu {
+  display: none;
+}
+
 .offer {
   display: flex;
   justify-content: center;
@@ -91,15 +100,16 @@ ul {
   height: 20rem;
  width: 100%;
 }
-.grid{
+
+.grid {
   width: 960px;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-between;
-  }
+}
 
-.cell{
+.cell1, .cell2, .cell3{
   display: flex;
   flex-direction: column;
   width: 12.5rem;
@@ -108,17 +118,19 @@ ul {
   border: 4px solid black;
   justify-content: space-between;
 }
-.cell img{
+.cell1 img, .cell2 img, .cell3 img{
   display: block;
   width: 9rem;
   height: 9rem;
   padding: 1rem;
 }
+
 #glasses{
   margin-top: 1.5rem;
   width: 100%;
   height: auto;
 }
+
 .description {
   width: 100%;
   display: block;
@@ -127,33 +139,39 @@ ul {
   text-align: center;
   padding: 0.5em 0;
 }
+
 .info-container{
   display: flex;
   justify-content: center;
   width: 100%;
   height: 10rem;
 }
+
 .info-grid{
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-between;
-  }
+}
+
   .info-cell{
     width: 12.5rem;
     height: 5rem;
     margin-right: 1.25rem;
     justify-content: center;
     tex-align: center;
-  }
+}
+
   #hours{
     background: black;
     color: white;
-  }
+}
+
   #location{
     background: black;
     color: white;
-  }
+}
+
 /*footer*/
 .footer{
   color: white;
@@ -162,9 +180,94 @@ ul {
   width: 100%;
   margin-top: 4rem;
 }
+
 #copyright{
   text-align: left;
   align-items: center;
   padding-top: 2rem;
   margin-left: 10rem;
+}
+
+/*Media Query*/
+
+@media screen and (max-device-width: 1024px) {
+  .banner {
+    font-size: .77rem;
+    margin-left: 0;
+  }
+  h2 {
+    font-size: 1rem;
+  }
+  h4 {
+    font-size: .5rem;
+  }
+
+  ul li {
+    display: none;
+  }
+
+  .menu {
+    display: block;
+  }
+  .cell1, .cell2, .cell3 {
+    width: 47%;
+  }
+  .cell3 {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 480px){
+  body {
+   font-family: Helvetica;
+  }
+
+  .banner {
+    font-size: .77rem;
+    margin-left: 0;
+  }
+
+  h2 {
+   font-size: .77rem;
+   font-weight: bold;
+  }
+
+  h4 {
+   font-size: 1rem;
+   font-weight: bold;
+  }
+
+  .cell1, .cell2, .cell3 {
+    width: 90%;
+  }
+
+  .info-cell{
+    width: 90%;
+  }
+
+  .container2 {
+    margin-top: 10rem;
+    margin-left: 0;
+  }
+
+  .headline {
+    padding-top: 1rem;
+    padding-left: 2rem;
+  }
+
+  #copyright{
+    text-align: center;
+  }
+
+
+  ul li {
+    display: none;
+    }
+
+  .menu {
+      display: block;
+    }
+  .cell2, .cell3 {
+    display: none;
+  }
 }
